compiler/tools/fpp-check/test/redef_module_type.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/redef_module_type.fpp: 2.1
type T
^
error: redefinition of symbol T
previous definition was here:
[ local path prefix ]/compiler/tools/fpp-check/test/redef_module_type.fpp: 1.1
module T { }
^
